TEST_PROGRAMS/VALID/07/var.go
// go lecture (6), slide 8
package main


func main () {
	var x int
	var y = 42
	var z int = 1
	var x1, x2 int
	var y1, y2 = 42, 43
	var z1, z2 int = 1, 2
	var (
		x1, x2 int
		y1, y2 = 42, 43
		z1, z2 int = 1, 2
	)
}
