TEST_PROGRAMS/INVALID/08/arrayLit.go
package main;
var x [3]int = [3]int{1,2,3};
